# scale-sim

./: Cargo.toml  README.md  ews-scale-sim-prompt.md
.claude/: settings.local.json
src/: input.rs  main.rs  mqtt.rs  state.rs  ui.rs
