[package]
name = "ews-scale-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rumqttc = { version = "0.24", features = ["websocket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dotenvy = "0.15"
